Wrap up design tokens within P4 blocks
- As a part of the implementation of the Typographies's tokens

--- a/assets/src/styles/blocks/Accordion/AccordionStyle.scss
+++ b/assets/src/styles/blocks/Accordion/AccordionStyle.scss
@@ -4,7 +4,9 @@
 @import "../../master-theme/assets/src/scss/base/fonts";
 
 .accordion-block {
-  font-family: var(--headings--font-family);
+  _-- {
+    font-family: var(--headings--font-family);
+  }
 
   &.is-style-light .accordion-content .accordion-headline {
     --accordion-block-light-style-- {
