Small fix to get bigger avatars on certain pages
Google profile avatars plugins seems to add a suffix string that fetches
smaller images than what we want in certain cases.

This is a hotfix till we have a response from them for a better way to
handle this.

--- a/templates/blocks/author_profile.twig
+++ b/templates/blocks/author_profile.twig
@@ -16,7 +16,7 @@
                     <figure class="author-block-image d-block d-sm-block d-md-none">
                         <img
                             itemprop="image"
-                            src="{{ fn('get_avatar_url', post.author.id, {'size' : 294 }) }}"
+                            src="{{ fn('get_avatar_url', post.author.id, {'size' : 294 }) | trim('=s96-c') }}"
                             alt="{{ post.author.name }}"
                         />
                     </figure>
