--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -34,12 +34,33 @@
 }
 
 .image-picker li[data-wordpress-id]:after {
-  content: "✔️";
-  font-size: 18px;
-  background: white;
+  content: "";
+  display: block;
+  background: url("../../images/added-to-library.svg");
+  width: 25px;
+  height: 25px;
   position: absolute;
-  top: 0;
-  right: 0;
+  /* 2px to account for the border width */
+  top: 2px;
+  left: 2px;
+}
+
+.image-picker .added-to-library {
+  display: none;
+}
+
+.image-picker li[data-wordpress-id]:hover .added-to-library {
+  display: block;
+  position: absolute;
+  top: 2px;
+  left: 27px;
+  background: white;
+  opacity: 90%;
+  height: 25px;
+  line-height: 25px;
+  padding: 0 4px;
+  font-size: 10px;
+  color: black;
 }
 
 .image-picker li img.picker-selected {
