PLANET-7186 Add setting for Hubspot tracking code
Ref https://jira.greenpeace.org/browse/PLANET-7186

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -48,6 +48,7 @@
         {% endblock %}
 
         {{ function('wp_footer') }}
+        {% include 'hubspot_tracking_code.twig' %}
     {% endblock %}
 </body>
 </html>
