--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -300,8 +300,9 @@ table.spreadsheet-table.is-color-gp-green {
 
 // Body links
 .post-content,
+.post-content > article,
 .page-content {
-  p > a,
+  p:not(.article-list-item-meta) a,
   > ul li a,
   > ol li a {
     @include shared-link-styles;
