PLANET-7198 Add self-reference canonical urls to listing pages
This is a good SEO practice

--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -29,6 +29,9 @@
         {% endfor %}
     {% endif %}
 
+    {% if canonical_link %}
+        <link rel="canonical" href="{{ canonical_link }}">
+    {% endif %}
 
     {{ wp_head }}
 
