--- a/assets/src/scss/pages/post/_author-block.scss
+++ b/assets/src/scss/pages/post/_author-block.scss
@@ -28,8 +28,10 @@
 }
 
 .author-block-info-title {
+  _-- {
+    font-weight: bold;
+  }
   font-size: 20px;
-  font-weight: bold;
   text-align: center;
   margin-bottom: 16px;
 }
