--- a/assets/src/scss/pages/post/_comments-block.scss
+++ b/assets/src/scss/pages/post/_comments-block.scss
@@ -55,6 +55,10 @@
 
   .single-comment-meta {
     .comment-reply-link {
+      _-- {
+        font-family: inherit;
+        font-weight: inherit;
+      }
       float: right;
       margin-top: 0;
 
