PLANET-7204: Update Columns font weight (#1093)
Update Columns font weight

- The current PR is part of the 2080 from the theme

Co-authored-by: Dan Tovbein <dtovbein@gmail.com>

--- a/assets/src/styles/blocks/Columns.scss
+++ b/assets/src/styles/blocks/Columns.scss
@@ -1,7 +1,9 @@
 .columns-block {
   a {
     &:not(.btn) {
-      font-weight: inherit;
+      _-- {
+        font-weight: inherit;
+      }
     }
 
     &.btn-secondary {
