Follow up review
- Fix donate button from burger menu

--- a/templates/burger-menu.twig
+++ b/templates/burger-menu.twig
@@ -49,11 +49,11 @@
     <div class="burger-menu-footer">
         <a
             class="btn btn-donate"
-            href="{{ donate_menu_default[0].link }}"
+            href="{{ donate_menu_items[0].link }}"
             data-ga-category="Menu Navigation"
             data-ga-action="Donate"
             data-ga-label="{{ page_category }}">
-            {{ donate_menu_default[0].title }}
+            {{ donate_menu_items[0].title }}
         </a>
     </div>
 </div>
