--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -87,10 +87,6 @@
   opacity: 100%;
 }
 
-.image-picker.open-sidebar .help {
-  display: none;
-}
-
 .image-picker .help {
   position: absolute;
   bottom: 8px;
@@ -98,7 +94,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  z-index: 1;
 }
 
 .image-picker .help span {
@@ -133,10 +128,8 @@
   position: absolute;
   bottom: -14px;
   right: 4px;
-  border-top: 8px solid white;
-  border-bottom: 8px solid transparent;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
+  border: 8px solid transparent;
+  border-top-color: white;
 }
 
 .image-picker .help:hover .tooltip a {
@@ -332,10 +325,6 @@
 
   .image-picker .help:hover .tooltip {
     max-width: 330px;
-  }
-
-  .image-picker.open-sidebar .help {
-    display: flex;
   }
 
   .multiple-search {
