--- a/assets/src/scss/pages/_sitemap.scss
+++ b/assets/src/scss/pages/_sitemap.scss
@@ -19,4 +19,17 @@
   h5 {
     margin-bottom: 1rem;
   }
+
+  ul {
+    list-style: none;
+    padding-inline-start: 0;
+    @include small-and-less {
+      margin-bottom: 0;
+    }
+
+    li {
+      font-size: inherit;
+      line-height: inherit;
+    }
+  }
 }
