PLANET-7102 Add categories DLV on Posts
This is to make it easier to track High Level topics. This commit also removes the post_tags DLV from campaigns since they have no tags.

--- a/templates/blocks/google_tag_manager.twig
+++ b/templates/blocks/google_tag_manager.twig
@@ -52,6 +52,7 @@
       'post_tags': '{{ post_tags }}',
       'gPlatform': 'Planet 4',
       'p4_blocks': '{{ p4_blocks }}',
+      'post_categories': '{{ post_categories }}',
     });
 
     {% if not post.password_required %}
