--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -117,6 +117,7 @@
   background: white;
   width: 80%;
   font-size: 12px;
+  line-height: 1.5;
   border-radius: 4px;
   padding: 16px;
   margin-bottom: 8px;
@@ -359,6 +360,21 @@
 @media (min-width: 1200px) {
   .picker-sidebar {
     width: var(--sidebar-width-large);
+  }
+
+  .image-picker .help span {
+    line-height: 32px;
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+  }
+
+  .image-picker .help:hover .tooltip {
+    font-size: 14px;
+  }
+
+  .image-picker .help:hover .tooltip:after {
+    right: 8px;
   }
 }
 
