Implement CSS variables to font families
- This allows to NRO to override any token when the new identity is relased

--- a/assets/src/scss/base/_css-variables.scss
+++ b/assets/src/scss/base/_css-variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --body--font-family: #{$lora};
-  --headings--font-family: #{$roboto};
+  --body--font-family: var(--font-family-primary);
+  --headings--font-family: var(--font-family-secondary);
   --headings--font-weight: bold;
   --body--background-color: #{$white};
   --body--color: #{$grey-80};
