--- a/assets/src/scss/base/_variables.scss
+++ b/assets/src/scss/base/_variables.scss
@@ -2,6 +2,12 @@
 $roboto:     "Roboto", sans-serif;
 $lora:       "Lora", serif;
 
+:root {
+  --font-family-primary: #{$roboto};
+  --font-family-secondary: #{$lora};
+  --font-family-tertiary: #{$lora};
+}
+
 // Media queries
 $extra-small-width:       320px;
 $small-width:             576px;
