PLANET-7215 Apply the new design to the Submenu block
This should only be applied when the new identity is enabled

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -239,6 +239,19 @@
   --columns-block--a--not--btn--font-weight: var(--font-weight-regular);
   --single-comment-meta--comment-reply-link--medium-and-up--font-family: var(--font-family-primary);
   --single-comment-meta--comment-reply-link--medium-and-up--font-weight: var(--font-weight-regular);
+  --submenu-block--border-radius: 4px;
+  --submenu-block--background-color: var(--white);
+  --submenu-block--box-shadow: 0 3px 8px 0 rgba(28, 28, 28, 0.2);
+  --submenu-block--padding: 20px 24px 24px 24px;
+  --submenu-block-heading--font-family: var(--font-family-primary);
+  --submenu-block-heading--color: var(--grey-900);
+  --submenu-block-heading--padding-inline-start: 0;
+  --submenu-block-menu--font-family: var(--font-family-tertiary);
+  --submenu-block-menu--margin: 0;
+  --submenu-block-menu--padding: 0;
+  --submenu-block-bullet-item--margin-inline-end: 0;
+  --submenu-block-bullet-item--margin-inline-start: 16px;
+  --submenu-block-number-item--margin-inline-start: 16px;
 }
 
 h1,
