--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -11,6 +11,10 @@
   padding-left: 10px;
 }
 
+#wpbody-content {
+  padding-bottom: 0;
+}
+
 #wpfooter {
   display: none;
 }
@@ -272,7 +276,6 @@
 
 .archive-picker-loading {
   text-align: center;
-  margin-top: 30px;
 }
 
 .picker-sidebar-header .close-sidebar {
